product info details updated

--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -865,3 +865,220 @@ input[type=checkbox]:checked {
     margin-right: 10px;
     margin-top: 12px;
 }
+
+/* --------------------- Product Info Details -------------------------------------  */
+.product-info-details-left-panel{
+    background-color: #fff;
+    padding: 10px;
+}
+.product-info-details-right-panel{
+    background-color: #fff;
+    padding: 10px;
+}
+.product-info-details-left-panel h1{
+    font-family: 'effra-regular';
+    color: #00deb6!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel h1{
+    border-bottom: 1px solid #ccc!important;
+}
+.product-info-details-left-panel-auction-timeblock{
+    text-align: center;
+    border-radius: 50%;
+    border: 2px solid #00deb6!important;
+    padding: 20px 5px 5px 5px;
+}
+.product-info-details-left-panel-timeheader{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel-auction-time{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel-timeheader{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel-current-price-header{
+    font-size: 13px;
+    font-family: 'effra-regular';
+    color: #484848!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel-current-price{
+    font-size: 20px;
+    font-family: 'effra-regular';
+    color: #00deb6;
+    font-weight: normal;
+}
+.product-info-details-input-custom-field {
+    border-radius: 0px!important;
+    border: 1px solid #ccc!important;
+    padding: 6px 12px!important;
+}
+.product-info-details-input-custom-field:focus {
+    border: 1px solid #00deb6!important;
+}
+.product-info-details-custom-button {
+    background-color: #00deb6!important;
+    border: 1px solid #00deb6!important;
+    color: #ffffff;
+    border-radius: 0px!important;
+    border: 1px solid #ccc!important;
+    padding: 6px 12px!important;
+}
+.product-info-details-custom-button:focus {
+    border: 1px solid #00deb6!important;
+}
+.product-info-details-left-panel-bid-label{
+    font-size: 14px;
+    font-family: 'effra-regular';
+    color: #484848!important;
+    font-weight: normal;
+}
+.product-info-details-left-panel-previous-bids-header{
+    font-family: 'effra-regular';
+    color: #484848;
+    font-size: 14px;
+    font-weight: normal;
+    margin-top: 10px;
+    padding: 10px;
+}
+.product-info-details-left-panel-previous-bids{
+    font-family: 'effra-regular';
+    color: #484848;
+    font-size: 20px;
+    font-weight: normal;
+    max-height: 250px;
+    overflow-y: auto;
+    padding: 10px;
+}
+.product-info-details-left-panel-location{
+    font-family: 'effra-regular';
+    color: #484848;
+    font-size: 20px;
+    font-weight: normal;
+    padding: 10px; 
+}
+.product-info-details-right-panel-product-title{
+    font-family: 'effra-regular';
+    color: #484848;
+    padding: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: 400;
+}
+.product-info-details-right-panel-carousel-img-adjust{
+    height: 300px!important;  
+    width: 100%!important;  
+}
+.product-info-details-right-panel-product-description-header{
+    font-family: 'effra-regular';
+    font-size: 20px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-description{
+    font-family: 'effra-regular';
+    font-size: 16px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+
+/* --------------------- Product Info Details Carousel-------------------------------------  */
+#quote-carousel 
+{
+    padding: 10px;
+
+}
+/* Control buttons  */
+#quote-carousel .carousel-control
+{
+    background: none;
+    color: #222;
+    font-size: 2.3em;
+    text-shadow: none;
+    margin-top: 145px!important;
+}
+/* Previous button  */
+#quote-carousel .carousel-control.left 
+{
+}
+/* Next button  */
+#quote-carousel .carousel-control.right 
+{
+}
+/* Changes the position of the indicators */
+#quote-carousel .carousel-indicators 
+{
+    right: 50%;
+    top: auto;
+    bottom: 0px;
+    margin-right: -19px;
+}
+/* Changes the color of the indicators */
+#quote-carousel .carousel-indicators li 
+{
+    background: #c0c0c0;
+}
+#quote-carousel .carousel-indicators .active 
+{
+    background: #333333;
+}
+#quote-carousel img
+{
+    width: 250px;
+    height: 100px
+}
+/* End carousel */
+
+.item blockquote {
+    border-left: none; 
+    margin: 0;
+}
+.item blockquote img {
+    margin-bottom: 10px;
+}
+.item blockquote p:before {
+    content: "\f10d";
+    font-family: 'Fontawesome';
+    float: left;
+    margin-right: 10px;
+}
+@media (min-width: 768px) { 
+    #quote-carousel 
+    {
+        margin-bottom: 0;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 768px) { 
+    #quote-carousel .carousel-indicators {
+        bottom: -20px !important;  
+    }
+    #quote-carousel .carousel-indicators li {
+        display: inline-block;
+        margin: 0px 5px;
+        width: 15px;
+        height: 15px;
+    }
+    #quote-carousel .carousel-indicators li.active {
+        margin: 0px 5px;
+        width: 20px;
+        height: 20px;
+    }
+}
+
+
