--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -27,6 +27,7 @@ body{
 h1,h2,h3,h4,h5,h6{
     font-family: 'effra-medium';
     color: #484848;
+    line-height: 150%;
 }
 .padding-5px{
     padding: 5px;
@@ -880,7 +881,7 @@ input[type=checkbox]:checked {
     color: #00deb6!important;
     font-weight: normal;
 }
-.product-info-details-left-panel h1{
+.hr{
     border-bottom: 1px solid #ccc!important;
 }
 .product-info-details-left-panel-auction-timeblock{
@@ -995,7 +996,62 @@ input[type=checkbox]:checked {
     padding: 10px;
     font-weight: normal;
 }
-
+.product-info-details-right-panel-product-availability-header{
+    font-family: 'effra-regular';
+    font-size: 20px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-availability-content{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-extra-cost-header{
+    font-family: 'effra-regular';
+    font-size: 20px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-extra-cost-content{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-amenities-header{
+    font-family: 'effra-regular';
+    font-size: 20px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-amenities-content{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-tenant-preferences-header{
+    font-family: 'effra-regular';
+    font-size: 20px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
+.product-info-details-right-panel-product-tenant-preferences-content{
+    font-family: 'effra-regular';
+    font-size: 14px;
+    color: #484848;
+    padding: 10px;
+    font-weight: normal;
+}
 /* --------------------- Product Info Details Carousel-------------------------------------  */
 #quote-carousel 
 {
